--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,5 +1,25 @@
-<div class="w-full h-[100dvh] bg-amber-50">
-    <app-sidebar class="w-1/4"/>
-    <router-outlet/>
-</div>
+<div class="drawer lg:drawer-open h-screen">
+  <!-- Toggle oculto en desktop -->
+  <input id="my-drawer" type="checkbox" class="drawer-toggle" />
 
+  <!-- Contenido principal -->
+  <div class="drawer-content flex flex-col">
+    <!-- Navbar en móvil con botón hamburguesa -->
+    <div class="w-full navbar bg-base-100 lg:hidden">
+      <label for="my-drawer" class="btn btn-primary drawer-button">
+        ☰
+      </label>
+    </div>
+
+    <!-- Aquí se carga la vista de cada ruta -->
+    <div class="p-4 flex-1 ">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+
+  <!-- Sidebar -->
+  <div class="drawer-side h-full">
+    <label for="my-drawer" class="drawer-overlay"></label>
+    <app-sidebar class="h-full w-72"></app-sidebar>
+  </div>
+</div>
